add task controller& add swagger docs
